--- a/sdk/api/session/create.mdx
+++ b/sdk/api/session/create.mdx
@@ -25,8 +25,8 @@ session = galtea.sessions.create(
 <ResponseField name="test_case_id" type="string" optional>
   The ID of a test case. Required for non-production sessions (`is_production=False`).
 </ResponseField>
-<ResponseField name="context" type="dict" optional>
-  A flexible key-value store for user-defined context.
+<ResponseField name="context" type="string" optional>
+  The context provided to the AI product during the session.
 </ResponseField>
 <ResponseField name="is_production" type="boolean" optional>
   A flag to indicate if the session is from a production environment. Defaults to `False`.
