--- a/sdk/api/evaluation-task/create.mdx
+++ b/sdk/api/evaluation-task/create.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Create Evaluation Tasks from Session'
-description: "Create evaluation tasks for all inference results within a session."
+title: 'Create Evaluation Tasks'
+description: "Create evaluation tasks for all inference results within a session using specified metrics."
 ---
 
 This method evaluates an entire conversation stored in a [Session](/concepts/product/version/session) by creating evaluation tasks for each of its [Inference Results](/concepts/product/version/session/inference-result).
