--- a/sdk/api/evaluation-task/service.mdx
+++ b/sdk/api/evaluation-task/service.mdx
@@ -14,7 +14,7 @@ This Service is exposed by the `galtea.evaluation_tasks` object.
 
 ## SDK Methods
 - [Create Single-Turn Evaluation Task](/sdk/api/evaluation-task/create-single-turn)
-- [Create Evaluation Tasks from Session](/sdk/api/evaluation-task/create-from-session)
+- [Create Evaluation Tasks](/sdk/api/evaluation-task/create)
 - [Listing Evaluation Tasks](/sdk/api/evaluation-task/list)
 - [Retrieving Evaluation Task](/sdk/api/evaluation-task/get)
 - [Deleting Evaluation Task](/sdk/api/evaluation-task/delete)
