--- a/sdk/api/session/service.mdx
+++ b/sdk/api/session/service.mdx
@@ -17,6 +17,7 @@ This Service is exposed by the `galtea.sessions` object.
 - [Get Or Create Session](/sdk/api/session/get-or-create)
 - [List Sessions](/sdk/api/session/list)
 - [Get Session](/sdk/api/session/get)
+- [Delete Session](/sdk/api/session/delete)
 
 ## Related Concepts
 <SessionCard />
