--- a/concepts/product/version/session/evaluation/task.mdx
+++ b/concepts/product/version/session/evaluation/task.mdx
@@ -15,7 +15,7 @@ import TestCaseCard from '/snippets/cards/test-case-card.mdx';
 
 An evaluation task in Galtea represents the assessment of an [evaluation](/concepts/product/version/session/evaluation) from a [session](/concepts/product/version/session) using a the evaluation criteria of a [metric type](/concepts/metric-type). So multiple evaluation tasks can exist for each [evaluation](/concepts/product/version/session/evaluation).
 
-<Note>Evaluation tasks don't perform inference on the LLM product themselves. Rather, they evaluate outputs that have already been generated. You should perform inference on your product first, then trigger the evaluation task.</Note>
+<Note>Evaluation tasks don't perform inference on the LLM [product](/concepts/product) themselves. Rather, they evaluate outputs that have already been generated. You should perform inference on your product first, then trigger the evaluation task.</Note>
 
 The only way to **create** evaluation tasks is programmatically by using the [Galtea SDK](/sdk/api/evaluation-task/service) but they can be viewed and managed on the [Galtea dashboard](https://platform.galtea.ai/).
 
@@ -24,8 +24,8 @@ The only way to **create** evaluation tasks is programmatically by using the [Ga
 Evaluation tasks follow a specific lifecycle:
 
 <Steps>
-  <Step title="Creation">[Trigger an evaluation task](/sdk/examples/create-evaluation). It will appear in the Evaluation's details page with the status "pending"</Step>
-  <Step title="Processing">Galtea's evaluation system processes the task using the evaluation criteria of the selected metric type</Step>
+  <Step title="Creation">[Trigger an evaluation task](/sdk/examples/create-evaluation). It will appear in the [Evaluation's](/concepts/product/version/session/evaluation) details page with the status "pending"</Step>
+  <Step title="Processing">Galtea's evaluation system processes the task using the evaluation criteria of the selected [metric type](/concepts/metric-type)</Step>
   <Step title="Completion">Once processed, the status changes to "completed" and the [results](/concepts/product/version/session/evaluation/task#evaluation-task-results-properties) are available</Step>
 </Steps>
 
