--- a/concepts/metric-type/role-adherence.mdx
+++ b/concepts/metric-type/role-adherence.mdx
@@ -11,13 +11,12 @@ This is especially important in enterprise and safety-sensitive applications, wh
 
 ## Evaluation Parameters
 
-To compute the `role_adherence` metric, the following inputs are required:
+To compute the `role_adherence` metric, the following inputs are required in every turn of the conversation:
 
 - **`input`**: The current user message.
 - **`actual_output`**: The corresponding chatbot response.
-- **`conversational_turns`**: The entire preceding conversation history, including the system prompt or persona definition if applicable.
 
-These inputs allow the system to evaluate consistency with the assigned role over time.
+This metric will evaluate the whole conversation, including all turns, to evaluate consistency with the assigned role over time.
 
 ---
 
