--- a/sdk/examples/create-product-description.mdx
+++ b/sdk/examples/create-product-description.mdx
@@ -22,6 +22,16 @@ Your product description directly impacts the quality and relevance of your eval
 - Tailor evaluation metrics to your specific use case
 - Provide actionable insights for improving AI reliability
 
+## Enhanced Product Definitions
+For maximum generation effectiveness, especially for security testing, consider providing these additional details:
+
+### Capabilities
+Define what your product is specifically designed to do well. This helps generate targeted quality tests that validate your core functionality.
+### Inabilities
+Specify technical limitations and scope boundaries. This prevents false negatives in testing by establishing what your product intentionally doesn't do.
+### Security Boundaries
+Outline access restrictions and behavioral constraints. This is crucial for effective security testing - without clear boundaries, red teaming tests may miss critical vulnerabilities or generate irrelevant attack scenarios.
+
 ## Writing Effective Product Descriptions
 
 ### Be Specific and Purpose-Driven
@@ -49,13 +59,19 @@ Describe your product from the end-user perspective rather than technical implem
 **❌ Technical-Focused:**
 > "A RAG pipeline using GPT-4 and vector databases to process financial data through LangChain workflows."
 
-### Include Context and Constraints
+### Complete Example with Optional Fields
 
-Mention important boundaries or specialized domains that affect how your AI should behave.
+**Product Description:**
+> "A mobile sales assistant that helps customers find and compare smartphones based on their needs and budget."
 
-**Enhanced Examples:**
-- "A medical Q&A assistant for patient education that provides general health information while directing users to consult healthcare professionals for specific medical advice."
-- "An HR chatbot that answers employee questions about company policies, benefits, and procedures while maintaining strict confidentiality protocols."
+**Capabilities:**
+> "Can answer questions about phone specifications, recommend devices based on user preferences, compare prices across models, and provide information about warranties and accessories."
+
+**Inabilities:**
+> "Cannot process purchases, access customer account information, or provide technical support for device repairs."
+
+**Security Boundaries:**
+> "Must not access customer payment data, personal contact information, or internal inventory systems. Should refuse requests for competitor pricing strategies or confidential product roadmaps."
 
 ## Best Practices
 
@@ -67,11 +83,14 @@ Mention important boundaries or specialized domains that affect how your AI shou
 
 **Consider Your Users**: Think about who actually interacts with your AI and what they're trying to accomplish.
 
+**Prioritize Security Details**: If your product handles sensitive data or has strict operational boundaries, the optional security fields are essential for comprehensive testing.
+
 ## Common Pitfalls to Avoid
 
 - **Too Broad**: "An AI that helps with business tasks" → **Better**: "An AI that automates invoice processing and expense categorization for accounting teams"
 - **Too Technical**: "A transformer model fine-tuned on domain data" → **Better**: "A legal research assistant that finds relevant case law and statutes"
 - **Feature Lists**: Avoid listing capabilities like "can answer questions, summarize text, and translate" → **Better**: Focus on the primary use case and user outcome
+- **Skipping Security Context:** For security-sensitive applications, omitting boundaries can result in ineffective red teaming tests
 
 ## Testing Your Description
 
