--- a/concepts/metric-type/role-adherence.mdx
+++ b/concepts/metric-type/role-adherence.mdx
@@ -42,4 +42,4 @@ Scores close to **1** indicate strong consistency with the chatbot's intended pe
 ## Related Topics
 
 - [Knowledge Retention](/concepts/metric-type/knowledge-retention)
-- [Conversational Completeness](/concepts/metric-type/conversational-completeness)
+- [Conversation Completeness](/concepts/metric-type/conversation-completeness)
