--- a/sdk/api/evaluation-task/create.mdx
+++ b/sdk/api/evaluation-task/create.mdx
@@ -23,7 +23,7 @@ galtea.inference_results.create_batch(
 # Now, evaluate the entire session
 evaluation_tasks = galtea.evaluation_tasks.create(
     session_id=session.id,
-    metrics=["coherence", "conversational-relevancy"]
+    metrics=["coherence", "conversation-relevancy"]
 )
 ```
 
