--- a/sdk/examples/monitor-production-responses-to-user-queries.mdx
+++ b/sdk/examples/monitor-production-responses-to-user-queries.mdx
@@ -45,7 +45,7 @@ import os
 
 galtea = Galtea(api_key=os.getenv("GALTEA_API_KEY"))
 VERSION_ID = "YOUR_ACTIVE_VERSION_ID"
-METRICS_TO_EVALUATE = ["conversational-relevancy", "knowledge-retention"]
+METRICS_TO_EVALUATE = ["conversation-relevancy", "knowledge-retention"]
 
 # 1. Create a session at the start of the conversation
 # Use is_production=True for real user interactions
