--- a/concepts/metric-type/knowledge-retention.mdx
+++ b/concepts/metric-type/knowledge-retention.mdx
@@ -42,5 +42,5 @@ This yields a score between **0** (no retention) and **1** (perfect retention), 
 
 ## Related Topics
 
-- [Conversational Completeness](/concepts/metric-type/conversational-completeness)
+- [Conversation Completeness](/concepts/metric-type/conversation-completeness)
 - [Role Adherence](/concepts/metric-type/role-adherence)
