--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -72,6 +72,10 @@ At Galtea, we use two types of metrics to evaluate large language model (LLM) ou
   The name of the metric type. **Example**: "Factual Accuracy"
 </ResponseField>
 
+<ResponseField name="Tags" type="Text List" required>
+  The tags for the metric type so it can be easily identified and categorized. **Example**: ["RAG", "Conversational"]
+</ResponseField>
+
 <ResponseField name="Validation method" type="Enum" required>
   The method used to evaluate the metric. This can be either:
 
