--- a/sdk/api/metrics/create.mdx
+++ b/sdk/api/metrics/create.mdx
@@ -37,3 +37,6 @@ metric = galtea.metrics.create(
     You need to provide **either** *Criteria* **or** *Evaluation Steps*, but not both. Your choice depends on your preferred evaluation approach.
   </Note>
 </ResponseField>
+<ResponseField name="tags" type="list[string]" required="conditional">
+  The tags for the metric type so it can be easily identified and categorized.
+</ResponseField>
