--- a/changelog.mdx
+++ b/changelog.mdx
@@ -4,6 +4,7 @@ description: "The updates for Galtea"
 icon: "newspaper"
 ---
 
+import Changelog_2025_06_23 from '/snippets/changelog/2025-06-23.mdx';
 import Changelog_2025_06_16 from '/snippets/changelog/2025-06-16.mdx';
 import Changelog_2025_05_26 from '/snippets/changelog/2025-05-26.mdx';
 import Changelog_2025_05_19 from '/snippets/changelog/2025-05-19.mdx';
@@ -11,6 +12,7 @@ import Changelog_2025_05_12 from '/snippets/changelog/2025-05-12.mdx';
 import Changelog_2025_05_05 from '/snippets/changelog/2025-05-05.mdx';
 import Changelog_2025_04_28 from '/snippets/changelog/2025-04-28.mdx';
 
+<Changelog_2025_06_23 />
 <Changelog_2025_06_16 />
 <Changelog_2025_05_26 />
 <Changelog_2025_05_19 />
