added qa improve

--- a/snippets/changelog/2025-06-23.mdx
+++ b/snippets/changelog/2025-06-23.mdx
@@ -16,6 +16,11 @@ You can now create Quality Tests directly from your own examples using the new *
 
 These additions help you document and communicate your product’s strengths and boundaries more clearly. [Read about product details](/concepts/product).
 
+
+## Improved Q&A Generation
+Question-answer pairs are now generated with improved accuracy and clarity, thanks to better text filtering and processing.
+
+
 ## General Improvements
 
 We’ve made various bug fixes and UX/UI improvements across the Dashboard, SDK, and more, making your experience smoother and more reliable.
