add production description guide
add product description guide

--- a/snippets/changelog/2025-06-23.mdx
+++ b/snippets/changelog/2025-06-23.mdx
@@ -16,10 +16,12 @@ You can now create Quality Tests directly from your own examples using the new *
 
 These additions help you document and communicate your product’s strengths and boundaries more clearly. [Read about product details](/concepts/product).
 
-
 ## Improved Q&A Generation
 Question-answer pairs are now generated with improved accuracy and clarity, thanks to better text filtering and processing.
 
+## New Guide: Setting Up Your Product Description
+We've created a comprehensive guide to help you set up your product descriptions effectively. This guide covers best practices, examples, and tips to ensure your product is presented in the best light.
+Check it out [here](https://docs.galtea.ai/sdk/examples/create-product-description)
 
 ## General Improvements
 
