--- a/concepts/product.mdx
+++ b/concepts/product.mdx
@@ -44,21 +44,37 @@ The SDK allows you to list existing products, retrieve specific products by thei
 </ResponseField>
 
 <ResponseField name="Product Description" type="Text" required>
-  A detailed description of the product's intended use (the more explicit, the better).
-  **Example**: "An AI tool that generates concise summaries of legal documents while preserving key information."
-    <Info>Learn how to write effective product descriptions in our [detailed guide](/sdk/tutorials/create-product-description).</Info>
+  Describe what your AI product does, who it serves, and its main use case. Focus on user experience, not technical details.
+  <Info>
+    <ul>
+      <li><strong>What to include:</strong> What the product does, who uses it, and its primary purpose.</li>
+      <li><strong>What to avoid:</strong> Technical implementation details or internal jargon.</li>
+    </ul>
+    <strong>Example:</strong> "A mobile sales assistant that helps customers find and compare smartphones based on their needs and budget."
+    <br/>
+    Learn how to write effective product descriptions in our <a href="/sdk/tutorials/create-product-description">detailed guide</a>.
+  </Info>
 </ResponseField>
 
 <ResponseField name="Capabilities" type="Text" optional>
-  The main capabilities and functions your product is designed to perform. 
+  List what your product is specifically designed to do well. This helps generate targeted quality tests.
+  <Info>
+    <strong>Example:</strong> "Can answer questions about phone specifications, recommend devices based on user preferences, compare prices across models, and provide information about warranties and accessories."
+  </Info>
 </ResponseField>
 
 <ResponseField name="Inabilities" type="Text" optional>
-  The main limitations or technical constraints of your product.
+  List technical limitations and scope boundaries. This prevents irrelevant or misleading tests.
+  <Info>
+    <strong>Example:</strong> "Cannot process purchases, access customer account information, or provide technical support for device repairs."
+  </Info>
 </ResponseField>
 
 <ResponseField name="Security Boundaries" type="Text" optional>
-  Describe the security boundaries and restrictions that your product must enforce. Include data access limitations, behavioral constraints, and any security policies that must be maintained.
+  Outline access restrictions and behavioral constraints. This is crucial for effective security testing.
+  <Info>
+    <strong>Example:</strong> "Must not access customer payment data, personal contact information, or internal inventory systems. Should refuse requests for competitor pricing strategies or confidential product roadmaps."
+  </Info>
 </ResponseField>
 
 <ResponseField name="RAG" type="Boolean" required>
