--- a/sdk/tutorials/create-product-description.mdx
+++ b/sdk/tutorials/create-product-description.mdx
@@ -69,11 +69,22 @@ Describe your product from the end-user perspective rather than technical implem
 For maximum generation effectiveness, especially for security testing, consider providing these additional details:
 
 ### Capabilities
-Define what your product is specifically designed to do well. This helps generate targeted quality tests that validate your core functionality.
+List what your product is specifically designed to do well. This helps generate targeted quality tests.
+<Info>
+  <strong>Example:</strong> "Can answer questions about phone specifications, recommend devices based on user preferences, compare prices across models, and provide information about warranties and accessories."
+</Info>
+
 ### Inabilities
-Specify technical limitations and scope boundaries. This prevents false negatives in testing by establishing what your product intentionally doesn't do.
+List technical limitations and scope boundaries. This prevents irrelevant or misleading tests.
+<Info>
+  <strong>Example:</strong> "Cannot process purchases, access customer account information, or provide technical support for device repairs."
+</Info>
+
 ### Security Boundaries
-Outline access restrictions and behavioral constraints. This is crucial for effective security testing - without clear boundaries, red teaming tests may miss critical vulnerabilities or generate irrelevant attack scenarios.
+Outline access restrictions and behavioral constraints. This is crucial for effective security testing.
+<Info>
+  <strong>Example:</strong> "Must not access customer payment data, personal contact information, or internal inventory systems. Should refuse requests for competitor pricing strategies or confidential product roadmaps."
+</Info>
 
 ## Complete Example with Optional Fields
 
