mandatory new fields

--- a/sdk/tutorials/create-product-description.mdx
+++ b/sdk/tutorials/create-product-description.mdx
@@ -66,7 +66,7 @@ Describe your product from the end-user perspective rather than technical implem
 - **Feature Lists**: Avoid listing capabilities like "can answer questions, summarize text, and translate" → **Better**: Focus on the primary use case and user outcome
 
 ## Enhanced Product Descriptions
-For maximum generation effectiveness, especially for security testing, consider providing these additional details:
+For maximum generation effectiveness, especially for security testing, you need to provide these additional details:
 
 ### Capabilities
 List what your product is specifically designed to do well. This helps generate targeted quality tests.
