--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -72,7 +72,15 @@ At Galtea, we use two types of metrics to evaluate large language model (LLM) ou
   The name of the metric type. **Example**: "Factual Accuracy"
 </ResponseField>
 
-<ResponseField name="Tags" type="Text List" required>
+<ResponseField name="Description" type="Text" optional>
+  A brief description of what the metric type evaluates.
+</ResponseField>
+
+<ResponseField name="Documentation URL" type="URL" optional>
+  A URL pointing to more detailed documentation about the metric type.
+</ResponseField>
+
+<ResponseField name="Tags" type="Text List" optional>
   The tags for the metric type so it can be easily identified and categorized. **Example**: ["RAG", "Conversational"]
 </ResponseField>
 
