--- a/concepts/product/test/red-teaming-strategies.mdx
+++ b/concepts/product/test/red-teaming-strategies.mdx
@@ -34,12 +34,13 @@ Below are the main red teaming strategies available in Galtea:
 - **Rot13**: Apply the ROT13 cipher to shift letters and obfuscate the prompt. *Simple obfuscation to bypass basic checks.*
 - **Zero Width Insertion**: Insert zero-width characters to break up keywords that might be caught by simple string matching filters without affecting readability for humans.
 - **Emoji Obfuscation**: Use emojis to replace or supplement words, making detection harder. *Obscures meaning for keyword-based systems.*
+- **Biblical**: Transforms text into a biblical/ancient scripture style using poetic and symbolic language to disguise the intent while preserving meaning. *May bypass filters looking for direct requests.*
+- **Math Prompt**: Encodes malicious prompts into formal mathematical notation using group theory concepts to obscure the intent. *Can hide intent from standard text analysis.*
+
 
 [comment]: # (- **Backtranslation**: Translate prompts to another language and back to introduce subtle changes. *Can alter phrasing to evade detection.*)
-[comment]: # (- **Biblical**: Frame prompts in the style of religious or biblical texts to mask intent. *May bypass filters looking for direct requests.*)
 [comment]: # (- **Citation**: Add academic or formal citations to prompts to lend credibility or mask intent. *Can make harmful requests appear legitimate.*)
 [comment]: # (- **Prefix**: Add benign or misleading prefixes to prompts to bypass safety mechanisms. *Distracts or misleads content filters.*)
-[comment]: # (- **Math Prompt**: Express prompts using mathematical notation or equations to obfuscate meaning. *Can hide intent from standard text analysis.*)
 [comment]: # (- **Multilingual**: Mix multiple languages within a prompt to evade monolingual filters. *Useful for bypassing language-specific moderation.*)
 [comment]: # (- **Roleplay**: Frame prompts as roleplay scenarios to encourage unintended model behavior by making the harmful request seem like part of a game or character's persona.)
 
