--- a/sdk/tutorials/create-evaluation.mdx
+++ b/sdk/tutorials/create-evaluation.mdx
@@ -39,7 +39,7 @@ galtea = Galtea(api_key=os.getenv("GALTEA_API_KEY"))
 # Replace with your actual IDs
 YOUR_VERSION_ID = "your_version_id"
 YOUR_TEST_ID = "your_test_id"
-METRICS_TO_EVALUATE = ["factual-accuracy", "coherence"] 
+METRICS_TO_EVALUATE = ["Factual Accuracy", "coherence"] 
 
 # --- Your Product's Logic (Placeholder) ---
 # In a real scenario, this would call your actual AI model or API
