add custom_id property to session entity

--- a/concepts/product/version/session.mdx
+++ b/concepts/product/version/session.mdx
@@ -21,6 +21,11 @@ The Galtea SDK allows you to create, view, and manage sessions programmatically.
 
 ## Session Properties
 
+<ResponseField name="Custom ID" type="Text" required>
+  The custom ID associated with the session.
+  This is usually a client-side generated ID that identifies the conversation session between a user and a LLM app.
+</ResponseField>
+
 <ResponseField name="Version" type="Version" required>
   The version associated with the session.
 </ResponseField>
