--- a/sdk/api/session/create.mdx
+++ b/sdk/api/session/create.mdx
@@ -19,11 +19,14 @@ session = galtea.sessions.create(
 <ResponseField name="version_id" type="string" required>
   The ID of the version to associate with this session.
 </ResponseField>
-<ResponseField name="id" type="string" optional>
-  A client-provided session ID. If not provided, one will be auto-generated.
-</ResponseField>
 <ResponseField name="test_case_id" type="string" optional>
   The ID of a test case. Required for non-production sessions (`is_production=False`).
+</ResponseField>
+<ResponseField name="custom_id" type="string" optional>
+  A client-provided custom ID for the session.
+  <Note>
+    This is useful to associate sessions in the Galtea platform with those in your application.
+  </Note>
 </ResponseField>
 <ResponseField name="context" type="string" optional>
   The context provided to the AI product during the session.
