--- a/sdk/api/session/get-by-custom-id.mdx
+++ b/sdk/api/session/get-by-custom-id.mdx
@@ -8,13 +8,13 @@ Returns a [Session](/concepts/product/version/session) object.
 
 ## Example
 ```python
-session = galtea.sessions.get_by_custom_id(custom_id="YOUR_CUSTOM_ID", version_id="YOUR_VERSION_ID")
+session = galtea.sessions.get_by_custom_id(version_id="YOUR_VERSION_ID", custom_id="YOUR_CUSTOM_ID")
 ```
 
 ## Parameters
-<ResponseField name="custom_id" type="string" required>
-  The Custom ID associated with the session to retrieve.
-</ResponseField>
 <ResponseField name="version_id" type="string" required>
   The ID of the version associated with the session to retrieve.
+</ResponseField>
+<ResponseField name="custom_id" type="string" required>
+  The Custom ID associated with the session to retrieve.
 </ResponseField>
