--- a/sdk/api/galtea.mdx
+++ b/sdk/api/galtea.mdx
@@ -28,8 +28,11 @@ The `Galtea` class provides access to the following services:
 - [`tests`](/sdk/api/test/service): Access [test](/concepts/product/test) related functionalities.
 - [`test_cases`](/sdk/api/test-case/service): Access [test cases](/concepts/product/test/case) related functionalities.
 - [`metrics`](/sdk/api/metrics/service): Access [metric](/concepts/metric-type) related functionalities.
+- [`sessions`](/sdk/api/session/service): Access [session](/concepts/product/version/session) related functionalities.
+- [`inference_results`](/sdk/api/inference-result/service): Access [inference result](/concepts/product/version/session/inference-result) related functionalities.
 - [`evaluations`](/sdk/api/evaluation/service): Access [evaluation](/concepts/product/version/session/evaluation) related functionalities.
 - [`evaluation_tasks`](/sdk/api/evaluation-task/service): Access [evaluation task](/concepts/product/version/session/evaluation/task) related functionalities.
+- [`conversation_simulator`](/sdk/api/conversation-simulator/service): Access [conversation simulator](/concepts/conversation-simulator) related functionalities.
 
 
 ### Example
