--- a/sdk/api/test-case/create.mdx
+++ b/sdk/api/test-case/create.mdx
@@ -33,3 +33,6 @@ test_case = galtea.test_cases.create(
 <ResponseField name="variant" type="string" optional>
   An optional variant to categorize or label the test case (e.g., "original", "paraphrased").
 </ResponseField>
+<ResponseField name="reviewed_by_id" type="string" optional>
+  The ID of the user who has reviewed and validated this test case.
+</ResponseField>
